--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -1,14 +1,31 @@
 $transition-default: 0.3s;
 $transition-slow: 0.8s;
 
-$container-padding: 16px;
+$container-padding: 20px;
 
-$screen-desktop: 1536px;
+$screen-desktop: 1296px;
 $screen-laptop: 1280px;
 $screen-tablet-2x: 1024px;
 $screen-tablet: 768px;
 
-$mobile-wrapper: 343px;
+$mobile-wrapper: 320px;
+
+$bg-blue: #F4F6FA;
 
 $white: #ffffff;
 $black: #000000;
+
+$black-300: #474F5A;
+$black-400: #263141;
+$black-500: #263238;
+
+$cian-400: #10A2EC;
+
+$blue-300: #0093DD;
+$blue-400: #4E78DA;
+$blue-500: #1F56D8;
+$blue-600: #3663CB;
+
+$green-400: #23C1A1;
+
+$orange-400: #FDAE38;
