add main-promo section

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -17,4 +17,10 @@
 /*
   Компоненты
 */
-@import "./components/main-faq"; 
+@import "./components/main-faq";
+@import "./components/main-promo";
+
+/*
+  Миксины
+*/
+@import "./mixins/button-transparent";
