--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -21,6 +21,7 @@ $black-500: #263238;
 
 $cian-400: #10A2EC;
 
+$blue-border: #386AE040;
 $blue-300: #0093DD;
 $blue-400: #4E78DA;
 $blue-500: #1F56D8;
@@ -29,3 +30,7 @@ $blue-600: #3663CB;
 $green-400: #23C1A1;
 
 $orange-400: #FDAE38;
+$orange-500: #FE9410;
+
+$red-400: #FC4210;
+
