--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -10,6 +10,12 @@ $screen-tablet: 768px;
 
 $mobile-wrapper: 320px;
 
+$box-shadow-one: #1544821A;
+$box-shadow-two: #4B6AA626;
+$box-shadow-three: #14448B0D;
+
+
+
 $bg-blue: #F4F6FA;
 
 $white: #ffffff;
@@ -18,6 +24,8 @@ $black: #000000;
 $black-300: #474F5A;
 $black-400: #263141;
 $black-500: #263238;
+$black-600: #0D192B;
+
 
 $cian-400: #10A2EC;
 
