--- a/src/assets/styles/components/main-faq.scss
+++ b/src/assets/styles/components/main-faq.scss
@@ -41,7 +41,7 @@
       border-radius: 10px;
       min-height: 220px;
       padding: 0;
-      box-shadow: 0px 5px 10px 0px #1544821A;
+      box-shadow: 0px 5px 10px 0px $box-shadow-one;
     }
     &:before {
       position: absolute;
