--- a/src/assets/styles/components/main-promo.scss
+++ b/src/assets/styles/components/main-promo.scss
@@ -32,7 +32,7 @@
       inset: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba($color: #0D192B, $alpha: 0.05);
+      background-color: rgba($color: $black-600, $alpha: 0.05);
     }
     img {
       object-fit: cover;
@@ -160,7 +160,7 @@
         border-radius: 50%;
         svg {
           border-radius: 50%;
-          box-shadow: 0px 5px 15px 0px #4B6AA626, 0px 1px 4px 0px #14448B0D;
+          box-shadow: 0px 5px 15px 0px $box-shadow-two, 0px 1px 4px 0px $box-shadow-three;
         }
         &:after {
           display: none;
