add main resorts section

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -19,8 +19,11 @@
 */
 @import "./components/main-faq";
 @import "./components/main-promo";
+@import "./components/main-resorts";
 
 /*
   Миксины
 */
 @import "./mixins/button-transparent";
+@import "./mixins/resort-card";
+
