--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -14,8 +14,6 @@ $box-shadow-one: #1544821A;
 $box-shadow-two: #4B6AA626;
 $box-shadow-three: #14448B0D;
 
-
-
 $bg-blue: #F4F6FA;
 
 $white: #ffffff;
@@ -26,7 +24,6 @@ $black-400: #263141;
 $black-500: #263238;
 $black-600: #0D192B;
 
-
 $cian-400: #10A2EC;
 
 $blue-border: #386AE040;
@@ -36,9 +33,12 @@ $blue-500: #1F56D8;
 $blue-600: #3663CB;
 
 $green-400: #23C1A1;
+$green-500: #21A038;
 
 $orange-400: #FDAE38;
 $orange-500: #FE9410;
 
 $red-400: #FC4210;
+$red-500: #FC4310;
+
 
