--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -15,3 +15,4 @@ block content
   main
     include ./components/main-faq
     include ./components/main-promo
+    include ./components/main-resorts
