--- a/src/assets/styles/base/global.scss
+++ b/src/assets/styles/base/global.scss
@@ -43,8 +43,24 @@ h1, h3, h4, h5, h6 {
   font-family: "Panton";
 }
 
-p {
-  font-family: "Tilda Sans VF";
+ul {
+  list-style-position: inside;
+  display: flex;
+  flex-direction: column;
+  li {
+    position: relative;
+    padding-left: 12px;
+    &:before {
+      content: "";
+      width: 5px;
+      height: 5px;
+      border-radius: 50%;
+      background-color: $blue-600;
+      position: absolute;
+      left: 0;
+      top: 8px;
+    }
+  }
 }
 
 .render {
