--- a/src/assets/styles/components/main-faq.scss
+++ b/src/assets/styles/components/main-faq.scss
@@ -162,6 +162,10 @@
   }
 
   &__arrow {
+    margin-left: 10px;
+    @include screen(tablet) {
+      margin-left: 0;
+    }
     svg {
       path {
         stroke: $white;
@@ -209,26 +213,9 @@
   }
 
   &__list {
-    list-style-position: inside;
-    display: flex;
-    flex-direction: column;
     gap: 4px;
     @include screen(laptop) {
       gap: 10px;
-    }
-    li {
-      position: relative;
-      padding-left: 12px;
-      &:before {
-        content: "";
-        width: 5px;
-        height: 5px;
-        border-radius: 50%;
-        background-color: $blue-600;
-        position: absolute;
-        left: 0;
-        top: 8px;
-      }
     }
   }
 }
