--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -20,6 +20,7 @@
 @import "./components/main-faq";
 @import "./components/main-promo";
 @import "./components/main-resorts";
+@import "./components/main-procedures";
 
 /*
   Миксины
