--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -32,6 +32,8 @@ $blue-400: #4E78DA;
 $blue-500: #1F56D8;
 $blue-600: #3663CB;
 
+$gray-400: #A1ABB9;
+
 $green-400: #23C1A1;
 $green-500: #21A038;
 
