--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -16,3 +16,4 @@ block content
     include ./components/main-faq
     include ./components/main-promo
     include ./components/main-resorts
+    include ./components/main-procedures
