--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -68,6 +68,8 @@ html(lang="ru")
       Похоже у вас отключён Javascript, поэтому вы видете это сообщение.
 
   body
+    include ../components/icons
+    
     .render
 
     include ../components/header
