--- a/src/assets/styles/base/global.scss
+++ b/src/assets/styles/base/global.scss
@@ -63,6 +63,25 @@ ul {
   }
 }
 
+svg {
+  fill: currentColor;
+  stroke: currentColor;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .render {
   position: fixed;
   top: 0;
