--- a/src/assets/styles/mixins/resort-card.scss
+++ b/src/assets/styles/mixins/resort-card.scss
@@ -49,13 +49,13 @@
       text-align: center;
       color: $white;
     }
-    &-orange {
+    &--orange {
       background-color: $orange-500;
     }
-    &-red {
+    &--red {
       background-color: $red-500;
     }
-    &-green {
+    &--green {
       background-color: $green-500;
     }
   }
@@ -65,9 +65,27 @@
     font-weight: 700;
     line-height: 20px;
     color: $white;
+    display: inline-block;
+    transition: color $transition-default;
     @include screen(laptop) {
       font-size: 24px;
       line-height: 24px;
+    }
+  }
+
+  &__link {
+    max-width: max-content;
+    &:active {
+      .resort-card__title {
+        color: $orange-500;
+      }
+    }
+    @include screen(laptop) {
+      &:hover {
+        .resort-card__title {
+          color: $orange-500;
+        }
+      }
     }
   }
 
@@ -88,14 +106,21 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 16px;
+    transition: color $transition-default;
+    &:active {
+      color: $orange-500;
+    }
     @include screen(laptop) {
       font-size: 18px;
       font-weight: 500;
       line-height: 18px;
+      &:hover {
+        color: $orange-500;
+      }
     }
   }
 
-  &-mini {
+  &--mini {
     min-height: 120px;
     @include screen(tablet-2x) {
       min-height: 200px;
