--- a/src/views/components/main-resorts.pug
+++ b/src/views/components/main-resorts.pug
@@ -11,10 +11,10 @@ section.main-resorts
         +resort-card('', 'true', '/assets/images/main-resorts/mob-2.png', 'resort-2', false, '', true, 'Скидки до 30%', false, '', 'Крым', 'Ялта', 'Алушта', 'Евпатория', 'Саки', 'ЮБК', 'Гурзуф', 'Мисхор')
         +resort-card('', 'true', '/assets/images/main-resorts/mob-3.png', 'resort-3', false, '', false, '', false, '', 'КавМинВоды', 'Кисловодск', 'Ессентуки', 'Пятигорск', 'Железноводск')
       .main-resorts__items
-        +resort-card('resort-card-mini', false, '/assets/images/main-resorts/mob-4.png', 'resort-4', false, '', false, '', false, '', 'Абхазия')
-        +resort-card('resort-card-mini', false, '/assets/images/main-resorts/mob-5.png', 'resort-5', false, '', false, '', false, '', 'Белоруссия')
-        +resort-card('resort-card-mini', false, '/assets/images/main-resorts/mob-6.png', 'resort-6', false, '', false, '', false, '', 'Москва и обл.')
-        +resort-card('resort-card-mini', false, '/assets/images/main-resorts/mob-7.png', 'resort-7', false, '', false, '', true, 'Раннее бронирование', 'Алтай')
+        +resort-card('resort-card--mini', false, '/assets/images/main-resorts/mob-4.png', 'resort-4', false, '', false, '', false, '', 'Абхазия')
+        +resort-card('resort-card--mini', false, '/assets/images/main-resorts/mob-5.png', 'resort-5', false, '', false, '', false, '', 'Белоруссия')
+        +resort-card('resort-card--mini', false, '/assets/images/main-resorts/mob-6.png', 'resort-6', false, '', false, '', false, '', 'Москва и обл.')
+        +resort-card('resort-card--mini', false, '/assets/images/main-resorts/mob-7.png', 'resort-7', false, '', false, '', true, 'Раннее бронирование', 'Алтай')
   .wrapper
     ul.main-resorts__list
       li 
