--- a/src/assets/styles/components/main-procedures.scss
+++ b/src/assets/styles/components/main-procedures.scss
@@ -1,18 +1,75 @@
 .main-procedures {
+  position: relative;
   padding-top: 30px;
-  padding-bottom: 30px;
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(39, 104, 201, 0.07) 100%);
   @include screen(tablet-2x) {
     padding-top: 45px;
     padding-bottom: 45px;
     background-color: $bg-blue;
+    background-image: none;
+  }
+
+  &__wrapper {
+    position: relative;
   }
 
   &__blocks {
-    margin-top: 40px;
-    display: grid;
-    grid-template-columns: 1fr 416px;
-    gap: 24px;
+    &--mobile {
+      margin-top: 30px;
+      padding-bottom: 70px;
+      @include screen(tablet-2x) {
+        display: none;
+      }
+    }
+    &--laptop {
+      display: none;
+      gap: 24px;
+      @include screen(tablet-2x) {
+        display: grid;
+        margin-top: 40px;
+        grid-template-columns: 1fr 416px;
+      }
+    }
+  }
 
+  &__items {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+  }
+
+  &__number {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    color: $black-400;
+  }
+
+  &__name {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 16px;
+    color: $gray-400;
+  }
+
+  &__bg {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    max-height: 330px;
+    max-width: 224px;
+    z-index: -1;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
 
   &__block {
@@ -21,6 +78,25 @@
     border-radius: 10px;
     box-shadow: 0px 12px 35px 0px #64749A1F;
     background-color: $white;
+  }
+
+  &__image {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    max-height: 430px;
+    max-width: 390px;
+    width: 100%;
+    height: 100%;
+    display: none;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+    @include screen(laptop) {
+      display: block;
+    }
   }
 
   &__name {
@@ -37,6 +113,7 @@
     row-gap: 20px;
     &-large {
       max-height: 208px;
+      max-width: 500px;
       flex-wrap: wrap;
     }
   }
@@ -47,21 +124,68 @@
     line-height: 18px;
     max-width: max-content;
     color: $blue-500;
+    transition: color $transition-default;
+    @include screen(laptop) {
+      &:hover {
+        color: $orange-500;
+      }
+    }
+  }
+
+  &__buttons {
+    margin-top: 30px;
+    padding: 20px;
+    background-color: $white;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 12px 35px 0px #64749A1F;
+
+    position: absolute;
+    bottom: 0;
+    transform: translateY(50%) translateX(-50%);
+    left: 50%;
+    width: 100%;
+    @include screen(tablet) {
+      max-width: 319px;
+      margin: 30px auto 0;
+    }
   }
 
   &__button {
-    margin-top: 68px;
     display: inline-flex;
     gap: 10px;
+    justify-content: center;
     align-items: center;
     border: 1px solid rgba($color: $blue-border, $alpha: 0.25);
     border-radius: 8px;
     padding: 10px 16px;
+    width: 100%;
     span {
       color: $blue-500;
       font-size: 16px;
       font-weight: 600;
       line-height: 18px;
+      transition: color $transition-default;
+    }
+    svg {
+      fill: transparent;
+      stroke: $gray-400;
+    }
+    &:active {
+      span {
+        color: $orange-500;
+      }
+    }
+    @include screen(tablet-2x) {
+      margin-top: 66px;
+      width: max-content;
+    }
+    @include screen(laptop) {
+      &:hover {
+        span {
+          color: $orange-500;
+        }
+      }
     }
   }
 }
