--- a/src/assets/styles/components/main-resorts.scss
+++ b/src/assets/styles/components/main-resorts.scss
@@ -63,12 +63,14 @@
     display: none;
     margin-top: 50px;
     max-height: 246px;
+    padding-left: 10px;
     @include screen(tablet-2x) {
       display: flex;
       row-gap: 20px;
       flex-wrap: wrap;
     }
     li {
+      padding-left: 20px;
       color: $blue-500;
       font-size: 18px;
       font-weight: 600;
