--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -17,3 +17,4 @@ block content
     include ./components/main-promo
     include ./components/main-resorts
     include ./components/main-procedures
+    include ./components/main-about
