--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -21,6 +21,7 @@
 @import "./components/main-promo";
 @import "./components/main-resorts";
 @import "./components/main-procedures";
+@import "./components/main-about";
 
 /*
   Миксины
